src/objects/PEC_Scorecard__c.object
<CustomObject>
    <fields>
        <fullName>Resolve_Objections_Continue__c</fullName>
        <label>Resolve Objections Continue</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolve_Objections_How_Score__c</fullName>
        <label>Resolve Objections How Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolve_Objections_Start__c</fullName>
        <label>Resolve Objections Start</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolve_Objections_Stop__c</fullName>
        <label>Resolve Objections Stop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolve_Objections_What_Score__c</fullName>
        <label>Resolve Objections What Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScoreCard_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ScoreCard Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score_Date__c</fullName>
        <label>Score Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Self_Scored__c</fullName>
        <formula>if(Pec_Scored__c = CreatedById, true, false)</formula>
        <label>Self Scored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solutions_Dialogue_How_Score__c</fullName>
        <label>Solutions Dialogue How Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solutions_Dialogue_Positive_Feedback__c</fullName>
        <label>Solutions Dialogue Positive Feedback</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solutions_Dialogue_Positive_Ideas__c</fullName>
        <label>Solutions Dialogue Positive Ideas</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solutions_Dialogue_Stop__c</fullName>
        <label>Solutions Dialogue Stop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solutions_Dialogue_What_Score__c</fullName>
        <label>Solutions Dialogue What Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stored_Task_Id__c</fullName>
        <label>Stored Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_How_Possible_Score__c</fullName>
        <label>Total How Possible Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_How_Score__c</fullName>
        <label>Total How Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Possible_Score__c</fullName>
        <label>Total Possible Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <label>Total Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_What_Possible_Score__c</fullName>
        <label>Total What Possible Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_What_Score__c</fullName>
        <label>Total What Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Treatment_Value_Continue__c</fullName>
        <label>Treatment Value Continue</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Treatment_Value_How_Score__c</fullName>
        <label>Treatment Value How Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treatment_Value_Start__c</fullName>
        <label>Treatment Value Start</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Treatment_Value_Stop__c</fullName>
        <label>Treatment Value Stop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Treatment_Value_What_Score__c</fullName>
        <label>Treatment Value What Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Viewed_by_PEC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Viewed by PEC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Viewing_Method__c</fullName>
        <label>Viewing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Coached</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wrap_Up_How_Score__c</fullName>
        <label>Wrap Up How Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wrap_Up_Positive_Feedback__c</fullName>
        <label>Wrap Up Positive Feedback</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wrap_Up_Positive_Ideas__c</fullName>
        <label>Wrap Up Positive Ideas</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wrap_Up_Stop__c</fullName>
        <label>Wrap Up Stop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wrap_Up_What_Score__c</fullName>
        <label>Wrap Up What Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PEC Scorecard</label>
    <nameField>
        <displayFormat>PSC-{0000}</displayFormat>
        <label>PEC Scorecard Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PEC Scorecards</pluralLabel>
    <recordTypes>
        <fullName>Call_Back</fullName>
        <active>true</active>
        <description>Scoring a call back done by the PEC</description>
        <label>Call Back</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consult</fullName>
        <active>true</active>
        <description>Scoring a consult done by the PEC</description>
        <label>Consult</label>
    </recordTypes>
    <recordTypes>
        <fullName>Role_Play_Call_Back</fullName>
        <active>true</active>
        <description>Scoring a call back in a role play session</description>
        <label>Role Play Call Back</label>
    </recordTypes>
    <recordTypes>
        <fullName>Role_Play_Consult</fullName>
        <active>true</active>
        <description>Scoring a consult in a role play session</description>
        <label>Role Play Consult</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>